added icon_grid content block

--- a/cms/templates/_partials/components/content_builder.twig
+++ b/cms/templates/_partials/components/content_builder.twig
@@ -39,6 +39,8 @@
             'contentBuilder.team_grid:children',
             'contentBuilder.team_text_grid',
             'contentBuilder.team_text_grid:children',
+            'contentBuilder.icon_grid',
+            'contentBuilder.icon_grid:children',
         ]
     ) %}
 
