added icon_list content block

--- a/cms/templates/_partials/components/content_builder.twig
+++ b/cms/templates/_partials/components/content_builder.twig
@@ -41,6 +41,8 @@
             'contentBuilder.team_text_grid:children',
             'contentBuilder.icon_grid',
             'contentBuilder.icon_grid:children',
+            'contentBuilder.icon_list',
+            'contentBuilder.icon_list:children',
             'contentBuilder.map_text',
             'contentBuilder.map_text:children',
         ]
