added text_side_heading content block

--- a/cms/templates/_partials/components/content_builder.twig
+++ b/cms/templates/_partials/components/content_builder.twig
@@ -15,6 +15,8 @@
             'contentBuilder.hero_subpage:children',
             'contentBuilder.text',
             'contentBuilder.text:children',
+            'contentBuilder.text_side_heading',
+            'contentBuilder.text_side_heading:children',
             'contentBuilder.image',
             'contentBuilder.image:image',
             'contentBuilder.text_cta',
