added lity for lightbox popups

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -55,6 +55,9 @@
 // Swiper 
 @import '~swiper/swiper';
 
+// Lity
+@import 'lity/dist/lity.min.css';
+
 // Common Styles (overrides and utilities)
 @import "common";
 
