added icon_text_grid content block

--- a/cms/templates/_partials/components/content_builder.twig
+++ b/cms/templates/_partials/components/content_builder.twig
@@ -45,6 +45,8 @@
             'contentBuilder.icon_grid:children',
             'contentBuilder.icon_list',
             'contentBuilder.icon_list:children',
+            'contentBuilder.icon_text_grid',
+            'contentBuilder.icon_text_grid:children',
             'contentBuilder.map_text',
             'contentBuilder.map_text:children',
         ]
