--- a/cms/templates/_partials/blocks/icon_text_grid.twig
+++ b/cms/templates/_partials/blocks/icon_text_grid.twig
@@ -1,12 +1,12 @@
-{# Icon List Block #}
-{% set block_type = "icon_list" %}
+{# Icon Text Grid Block #}
+{% set block_type = "text_icon_grid" %}
 
 {# Block variable defaults #}
 {% set heading = block['heading'] is defined ? block.heading : '' %}
 {% set subheading = block['subheading'] is defined ? block.subheading : '' %}
 {% set sectionType = block['sectionType'] is defined ? block.sectionType : 'standard' %}
-{% set disablePartners = block['useCustomContent'] is defined ? block.useCustomContent : false %}
-{% set items = block.children is defined ? block.children|filter(item => item.type.handle == 'icon_list_item') : null %}
+{% set items = block.children is defined ? block.children|filter(item => item.type.handle == 'text_icon_item') : null %}
+
 
 <section class="section section--medium section--whitespace section-{{ block_type }}--block section--{{ sectionType }} animatable">
     <div class="container">
@@ -14,22 +14,23 @@
             <p class="subtitle--heading">{{ subheading }}</p>
         {% endif %}
         {% if heading|length %}
-            <h2 class="standard--heading">{{ heading }}</h2>
+            <h2 class="primary--heading">{{ heading }}</h2>
         {% endif %}
 
         {% if items|length %}
         <div class="icon-items grid-x grid-margin-x">        
         {% for item in items %}
-            {% set icon = item['icon'] is defined ? item.icon : '' %}
-            {% set title = item['rtfShortContent'] is defined ? item.rtfShortContent : '' %}
-            {% set url = item['linkUrl'] is defined ? item.linkUrl : '' %}
+            {% set iconHeading = item.heading|length ? item.heading : '' %}
+            {% set description = item.rtfContent|length ? item.rtfContent : '' %}
 
-            <div class="icon-item cell large-3 medium-6 small-12">
+            <div class="icon-item cell large-4 medium-6 small-12">
                 <div class="icon-container">
-                    {% if icon|length %}<span class="icon {{ icon }}"></span>{% endif %}
+                    <div class="icon-background">
+                    {% if iconHeading|length %}<span class="icon-text">{{ iconHeading }}</span>{% endif %}
+                    </div>
                 </div>
                 <div class="content-container">
-                    {% if title|length %}<div class="icon-title content rte">{{ title }}</div>{% endif %}
+                    {% if description|length %}<div class="item-description content rte">{{ description }}</div>{% endif %}
                 </div>
             </div>
         {% endfor %}
