--- a/cms/templates/_partials/components/content_builder.twig
+++ b/cms/templates/_partials/components/content_builder.twig
@@ -49,6 +49,8 @@
             'contentBuilder.icon_text_grid:children',
             'contentBuilder.map_text',
             'contentBuilder.map_text:children',
+            'contentBuilder.points_table_list',
+            'contentBuilder.points_table_list:children',
         ]
     ) %}
 
