--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1766,6 +1766,109 @@ footer.site-footer {
   }
 }
 
+// Points Table List content block
+.section-points_table_list--block {
+  .subtitle--heading, .primary--heading {
+    text-align: center; 
+  }
+
+  .primary--heading {
+    margin-bottom: 4rem;
+  }
+
+  .point-tables {
+    .point-table {
+      margin-top: 2rem;
+      margin-bottom: 2rem;
+
+      .table-heading {
+        display: flex;
+        
+        .icon-container {
+          flex: 1;
+          background: $primary-accent;
+          color: #FFFFFF;
+          position: relative;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          text-align: center;
+          padding: 0 0.5rem;
+          margin-top: 1.5rem;
+
+          .icon-circle {
+            position: relative;
+            top: -1.5rem;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 100%;
+            max-width: 5rem;
+            border: 4px solid $primary-accent;
+            background: #FFFFFF;
+            color: $primary-accent;
+            font-size: rem-calc(38px);
+            border-radius: 50%;
+
+            &::after {
+              content: '';
+              padding-bottom: 100%;
+            }
+          }
+
+          .table-heading {
+            position: relative;
+            top: -1rem;
+            text-transform: uppercase;
+            font-size: rem-calc(22px);
+            font-weight: 700;
+            margin-bottom: 1rem;
+          }
+        }
+      }
+
+      .table-content {
+        margin-top: 1.5rem;
+
+        @include breakpoint(large up) {
+          padding-left: 1.5rem;
+        }
+
+        .table-row {
+          display: flex;
+          flex-direction: row;
+          padding: 1rem 0;
+          border-top: 1px solid rgba(#000000, 0.15);
+
+          &:first-of-type {
+            border-top: none;
+          }
+
+          .column-heading {
+            text-transform: uppercase;
+            color: $primary-accent;
+            font-weight: 700;
+          }
+
+          p:last-of-type {
+            margin-bottom: 0;
+          }
+
+          .row-description {
+            flex: 4;
+          }
+
+          .row-value {
+            flex: 1;
+            text-align: right;
+            font-weight: 700;
+          }
+        }
+      }
+    }
+  }
+}
+
 /******************** Snippet Styles ********************/
 a.logo {
   position: relative;
