scaffolded formie frontend setup

--- a/cms/templates/_partials/components/content_builder.twig
+++ b/cms/templates/_partials/components/content_builder.twig
@@ -51,6 +51,7 @@
             'contentBuilder.map_text:children',
             'contentBuilder.points_table_list',
             'contentBuilder.points_table_list:children',
+            'contentBuilder.formie_form',
         ]
     ) %}
 
