--- a/cms/templates/_partials/components/content_builder.twig
+++ b/cms/templates/_partials/components/content_builder.twig
@@ -12,6 +12,7 @@
             'contentBuilder.hero:image',
             'contentBuilder.hero:children',
             'contentBuilder.hero_subpage',
+            'contentBuilder.hero_subpage:image',
             'contentBuilder.hero_subpage:children',
             'contentBuilder.text',
             'contentBuilder.text:children',
