added qgive_form content block

--- a/cms/templates/_partials/components/content_builder.twig
+++ b/cms/templates/_partials/components/content_builder.twig
@@ -53,6 +53,7 @@
             'contentBuilder.points_table_list',
             'contentBuilder.points_table_list:children',
             'contentBuilder.formie_form',
+            'contentBuilder.qgive_form',
         ]
     ) %}
 
