--- a/cms/templates/_partials/components/content_builder.twig
+++ b/cms/templates/_partials/components/content_builder.twig
@@ -50,6 +50,8 @@
             'contentBuilder.icon_text_grid:children',
             'contentBuilder.map_text',
             'contentBuilder.map_text:children',
+            'contentBuilder.map_grid',
+            'contentBuilder.map_grid:children',
             'contentBuilder.points_table_list',
             'contentBuilder.points_table_list:children',
             'contentBuilder.formie_form',
