--- a/cms/templates/_partials/components/content_builder.twig
+++ b/cms/templates/_partials/components/content_builder.twig
@@ -56,6 +56,7 @@
             'contentBuilder.points_table_list:children',
             'contentBuilder.formie_form',
             'contentBuilder.qgive_form',
+            'contentBuilder.articles_list',
         ]
     ) %}
 
