added recent_articles content block

--- a/cms/templates/_partials/components/content_builder.twig
+++ b/cms/templates/_partials/components/content_builder.twig
@@ -57,6 +57,9 @@
             'contentBuilder.formie_form',
             'contentBuilder.qgive_form',
             'contentBuilder.articles_list',
+            'contentBuilder.recent_articles',
+            'contentBuilder.recent_articles:blogCategory',
+            'contentBuilder.recent_articles:children',
         ]
     ) %}
 
