--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2179,6 +2179,101 @@ footer.site-footer {
   }
 }
 
+// Recent Articles block
+.section-recent_articles--block {
+  .primary--heading, .subtitle--heading {
+    text-align: center;
+  }
+
+  .buttons {
+    align-items: center;
+    justify-content: center;
+  }
+
+  .article-items {
+    margin-top: 1.5rem;
+  }
+
+  .article-items .article-item {
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
+
+    @include breakpoint(medium up) {
+      margin-bottom: 2rem;
+    }    
+    
+    .article-item-wrapper {
+      background-color: #FFFFFF;
+      position: relative;
+      z-index: 1;
+
+      @include breakpoint(medium up) {
+        padding-top: 55%;
+      }
+    }
+
+    .image-container {
+      @include breakpoint(medium up) {
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 55%;
+        z-index: -1;
+      }
+    }
+
+    .content-container {
+      z-index: 1;
+      margin: 0.5rem;
+      padding: 1.5rem 1.5rem 3rem 1.5rem;
+      background-color: #FFFFFF;
+
+      .inline--heading {
+        color: $primary-accent;
+      }
+
+      p {
+        color: $body-copy-color;
+      }
+
+      .post-date {
+        font-size: rem-calc(15px);
+        margin-bottom: 0.5rem;
+        text-transform: uppercase;
+        font-weight: 600;
+        color: #535353;
+
+        .text-separator {
+          padding-left: 0.15rem;
+          padding-right: 0.15rem;
+        }
+      }
+
+      .inline--heading {
+        margin-bottom: 0.8rem;
+        font-size: rem-calc(24px);
+        text-transform: none;
+
+        a {
+          font-weight: inherit;
+          color: inherit;
+          font-size: inherit; 
+          transition: color 200ms ease; 
+
+          &:hover, &:active {
+            color: $primary-accent; 
+          }
+        }
+      }
+
+      .article-excerpt {
+        margin-bottom: 0;
+      }
+    }
+  }
+}
+
 /**************** Article Block Overrides ***************/
 .article--content {
   .rte {
