scaffolded newsletter signup component

--- a/cms/templates/_partials/global/footer.twig
+++ b/cms/templates/_partials/global/footer.twig
@@ -1,7 +1,7 @@
 {# @var craft \craft\web\twig\variables\CraftVariable #}
 {% cache globally unless cacheExempt %}
+{% include '_partials/snippets/newsletter-signup' %}
 <footer class="site-footer animatable">
-    {# {% include '_partials/snippets/newsletter-signup' %} #}
     <div class="footer-links">
         <div class="container">
             <div class="footer-logo">
