added events system and featured_event content block

--- a/cms/templates/_partials/components/content_builder.twig
+++ b/cms/templates/_partials/components/content_builder.twig
@@ -60,6 +60,7 @@
             'contentBuilder.recent_articles',
             'contentBuilder.recent_articles:blogCategory',
             'contentBuilder.recent_articles:children',
+            'contentBuilder.featured_event',
         ]
     ) %}
 
