--- a/cms/templates/_partials/blocks/text_cta.twig
+++ b/cms/templates/_partials/blocks/text_cta.twig
@@ -4,7 +4,7 @@
 {# Block variable defaults #}
 {% set heading = block['heading'] is defined ? block.heading : '' %}
 {% set subheading = block['subheading'] is defined ? block.subheading : '' %}
-{% set rtfContent = block['rtfShortContent'] is defined ? block.rtfShortContent : '' %}
+{% set rtfContent = block['rtfContent'] is defined ? block.rtfContent : '' %}
 {% set sectionType = block['sectionType'] is defined ? block.sectionType : 'standard' %}
 {% set buttons = block.children is defined ? block.children|filter(item => item.type.handle == 'button') : null %}
 
