--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -965,6 +965,57 @@ footer.site-footer {
   }
 }
 
+// Event Hero
+.section-event_hero {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+
+  height: 75vh;
+  min-height: 25rem;
+  max-height: 40rem;
+  background-color: #16191A !important;
+  z-index: 0;
+  overflow: hidden;
+
+  .background-container {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    opacity: 0.4;
+  }
+
+  .event-meta {
+    text-align: center;
+
+    .page--heading, .subtitle--heading {
+      margin-bottom: 0.4rem;
+    }
+    
+    .subtitle--heading {
+      @include breakpoint(medium up) {
+        font-size: rem-calc(40px);
+      }
+    }
+
+    .event-date {
+      font-size: rem-calc(22px);
+      font-weight: 700;
+    }
+    
+    .buttons {
+      align-items: center;
+      justify-content: center;
+      margin-top: 1.6rem;
+    }
+  }
+}
+
 // Newsletter Signup component
 .section-newsletter_signup {
   .content-container {
@@ -2284,6 +2335,65 @@ footer.site-footer {
 
       .article-excerpt {
         margin-bottom: 0;
+      }
+    }
+  }
+}
+
+// Featured Event block
+.section-featured_event--block {
+  .container {
+    position: relative;
+    z-index: 1;
+  }
+
+  .background-container {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #16191A;
+    z-index: -1;
+
+    img {
+      opacity: 0.8;
+    }
+
+    &::after {
+      content: '';
+      display: block;
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+
+      background: linear-gradient(75.88deg, rgba(0, 0, 0, 0.75) -0.23%, rgba(0, 0, 0, 0) 76.11%);
+    }
+  }
+
+  .content-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    min-height: 25rem;
+    padding: 4rem 0;
+
+    @include breakpoint(large up) {
+      min-height: 35rem;
+    }
+
+    .meta-content {
+      max-width: 56rem;
+
+      .event-date {
+        margin-bottom: 0.5rem;
+        font-weight: 700;
+      }
+
+      .event-description {
+        max-width: 31rem;
       }
     }
   }
