--- a/cms/templates/_partials/components/content_builder.twig
+++ b/cms/templates/_partials/components/content_builder.twig
@@ -38,6 +38,8 @@
             'contentBuilder.image_text_stats_banner:children',
             'contentBuilder.image_text_slider',
             'contentBuilder.image_text_slider:children',
+            'contentBuilder.image_gallery',
+            'contentBuilder.image_gallery:children',
             'contentBuilder.team_grid',
             'contentBuilder.team_grid:children',
             'contentBuilder.team_text_grid',
