added events_slider content block

--- a/cms/templates/_partials/components/content_builder.twig
+++ b/cms/templates/_partials/components/content_builder.twig
@@ -63,6 +63,7 @@
             'contentBuilder.recent_articles:blogCategory',
             'contentBuilder.recent_articles:children',
             'contentBuilder.featured_event',
+            'contentBuilder.events_slider',
         ]
     ) %}
 
