added inline_hero_columns content block

--- a/cms/templates/_partials/components/content_builder.twig
+++ b/cms/templates/_partials/components/content_builder.twig
@@ -64,6 +64,9 @@
             'contentBuilder.recent_articles:children',
             'contentBuilder.featured_event',
             'contentBuilder.events_slider',
+            'contentBuilder.inline_hero_columns',
+            'contentBuilder.inline_hero_columns:image',
+            'contentBuilder.inline_hero_columns:children',
         ]
     ) %}
 
