--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1032,6 +1032,107 @@ footer.site-footer {
   }
 }
 
+// Modal Popup component
+.section-modal_popup {
+  &.modal-popup {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.75);
+    z-index: 99999;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    transition: opacity 300ms ease, visibility 300ms ease;
+    
+    &:not(.active) {
+      display: none;
+      visibility: hidden;
+      opacity: 0;
+    }
+    
+    .popup-container {
+      max-width: 50rem;
+      background: #FFFFFF;
+      border-radius: 5px;
+      margin: 1rem;
+      
+      -webkit-box-shadow: 0px 6px 10px 0px rgba(0,0,0,0.2);
+      -moz-box-shadow: 0px 6px 10px 0px rgba(0,0,0,0.2);
+      box-shadow: 0px 6px 10px 0px rgba(0,0,0,0.2);
+    }
+    
+    .popup-header {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+      background: $primary-accent;
+      color: #FFFFFF;
+      padding: 0.75rem 1.5rem;
+      
+      .popup-title-container {
+        padding-right: 1.5rem;
+        
+        .popup-title {
+          color: #FFFFFF;
+          margin: 0;
+          font-size: 1.1rem;
+          font-weight: 700;
+          text-transform: uppercase;
+        }
+      }
+      
+      .popup-controls-container .popup-close-button {
+        background: rgba(#FFFFFF, 1);
+        border: none;
+        width: 1.2rem;
+        height: 1.2rem;
+        border-radius: 50%;
+        color: $primary-accent;
+        cursor: pointer;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        transition: background-color 200ms ease, color 200ms ease;
+        
+        svg, img {
+          pointer-events: none;
+        }
+        
+        &:hover, &:active {
+          color: #FFFFFF;
+          background: darken($primary-accent, 10);
+        }
+      }
+    }
+    
+    .popup-content {
+      margin: 1.5rem 0;
+      padding: 0 1.5rem;
+      max-height: 50vh;
+      overflow-y: auto;
+
+      h2 {
+        @extend .inline--heading;
+      }
+
+      #mc_embed_signup form {
+        overflow: hidden;
+      }
+
+      #mce-responses {
+        margin-left: 0;
+        margin-right: 0;
+      }
+    }
+  }
+}
+
 /******************** Block Styles ********************/
 
 // Hero content block
