misc cleanup styles

--- a/src/scss/_animations.scss
+++ b/src/scss/_animations.scss
@@ -38,7 +38,7 @@
         height: 100%;
         top: 0;
         left: 0;
-        background: darken(#545b64, 20);
+        background: #FFFFFF;
     }
 
     &.show, &.animate-in {
