added custom_html content block

--- a/cms/templates/_partials/components/content_builder.twig
+++ b/cms/templates/_partials/components/content_builder.twig
@@ -67,6 +67,7 @@
             'contentBuilder.inline_hero_columns',
             'contentBuilder.inline_hero_columns:image',
             'contentBuilder.inline_hero_columns:children',
+            'contentBuilder.custom_html',
         ]
     ) %}
 
