--- a/cms/templates/_partials/components/content_builder.twig
+++ b/cms/templates/_partials/components/content_builder.twig
@@ -67,6 +67,9 @@
             'contentBuilder.inline_hero_columns',
             'contentBuilder.inline_hero_columns:image',
             'contentBuilder.inline_hero_columns:children',
+            'contentBuilder.inline_hero',
+            'contentBuilder.inline_hero:image',
+            'contentBuilder.inline_hero:children',
             'contentBuilder.custom_html',
         ]
     ) %}
