--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2633,8 +2633,76 @@ footer.site-footer {
   }
 }
 
+// Inline Hero block
+.section-inline_hero--block {
+  &.section-width--full {
+    position: relative;
+    z-index: 1;
+  }
+
+  &.section-width--standard {
+    .container {
+      position: relative;
+      z-index: 1;
+    }
+
+    .content-container {
+      min-height: 25rem;
+
+      @include breakpoint(large up) {
+        min-height: 35rem;
+      }
+    }
+  }
+
+  .background-container {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #16191A;
+    z-index: -1;
+
+    img {
+      opacity: 0.8;
+    }
+
+    &::after {
+      content: '';
+      display: block;
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+
+      background: linear-gradient(75.88deg, rgba(0, 0, 0, 0.75) -0.23%, rgba(0, 0, 0, 0) 76.11%);
+    }
+  }
+
+  .content-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 4rem 0;
+
+    .hero-content {
+      max-width: 56rem;
+
+      .hero-subheading {
+        margin-bottom: 0.5rem;
+        font-weight: 700;
+      }
+
+      .content {
+        max-width: 31rem;
+      }
+    }
+  }
+}
+
 // Inline Hero with Text Columns block styles
-// Featured Event block
 .section-inline_hero_columns--block {
   position: relative;
   z-index: 1;
